# gateway

./: .gitignore  ARCH.md  CLAUDE.md  CONFIG_EXAMPLE.md  Cargo.toml  DESCRIPTOR.md  LICENSE  README.en.md  README.md  config.example.yaml  watchdog.sh
boom-gateway/boom-audit/: Cargo.toml
boom-gateway/boom-audit/src/: lib.rs  log.rs  migrations.rs  reader.rs
boom-gateway/boom-auth/: Cargo.toml
boom-gateway/boom-auth/src/: key_auth.rs  lib.rs  models.rs
boom-gateway/boom-config/: Cargo.toml
boom-gateway/boom-config/src/: lib.rs
boom-gateway/boom-core/: Cargo.toml
boom-gateway/boom-core/src/: anthropic.rs  db_util.rs  debug_store.rs  error.rs  kv_event.rs  lib.rs  normalize.rs  provider.rs  types.rs
boom-gateway/boom-ctxaware/: Cargo.toml
boom-gateway/boom-ctxaware/src/: classifier.rs  lib.rs  stats.rs
boom-gateway/boom-dashboard/: Cargo.toml
boom-gateway/boom-dashboard/src/: auth.rs  handlers_admin.rs  handlers_static.rs  handlers_user.rs  lib.rs  migrations.rs  state.rs  stats_timeseries.rs
boom-gateway/boom-dashboard/src/frontend/: app.js  i18n.js  index.html  style.css
boom-gateway/boom-flowcontrol/: Cargo.toml
boom-gateway/boom-flowcontrol/src/: lib.rs
boom-gateway/boom-kvindex/: Cargo.toml
boom-gateway/boom-kvindex/src/: lib.rs  subscriber.rs  tokenizer.rs  vllm_event.rs
boom-gateway/boom-kvindex/src/backend/: flat.rs  mod.rs  token_prefix.rs
boom-gateway/boom-limiter/: Cargo.toml
boom-gateway/boom-limiter/src/: concurrency.rs  lib.rs  migrations.rs  sliding_window.rs
boom-gateway/boom-main/: Cargo.toml
boom-gateway/boom-main/src/: admin_command.rs  extractor.rs  health_monitor.rs  kv_aware.rs  main.rs  request_log.rs  rewrite.rs  routes.rs  state.rs
boom-gateway/boom-promptlog/: Cargo.toml
boom-gateway/boom-promptlog/src/: config.rs  entry.rs  lib.rs  stream.rs  writer.rs
boom-gateway/boom-provider/: Cargo.toml
boom-gateway/boom-provider/src/: anthropic.rs  azure.rs  bedrock.rs  gemini.rs  hybrid_router.rs  lib.rs  openai.rs
boom-gateway/boom-quota/: Cargo.toml
boom-gateway/boom-quota/src/: lib.rs  migrations.rs  store.rs
boom-gateway/boom-routing/: Cargo.toml
boom-gateway/boom-routing/src/: alias_store.rs  deployment_store.rs  hybrid_router.rs  inflight.rs  lib.rs  migrations.rs  rebalance.rs  request_rate.rs  router.rs
boom-gateway/boom-routing/src/policy/: delegated.rs  key_affinity.rs  kvc_aware.rs  load_helpers.rs  mod.rs  round_robin.rs
boom-gateway/docs/: KVC-Aware-Design-0.01.md
boom-gateway/ppt/: BooMGateway-CN.pptx  BooMGateway-Presentation.pptx  KVCache-Scheduling.pptx
docs/: kvc-aware-design.md  kvc-aware-event-reporting-research.md  vip-header-forwarding-design.md
misc/: pr-review.md
misc/LB/: Cargo.toml  Dockerfile  config.yaml  start.sh
misc/LB/src/: main.rs
misc/images/: .gitattributes
