[package]
name = "boom-audit"
version.workspace = true
edition.workspace = true

[dependencies]
boom-core = { path = "../boom-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
