[package]
name = "boom-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
