[package]
name = "boom-kvindex"
version.workspace = true
edition.workspace = true

[dependencies]
boom-core = { path = "../boom-core" }
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
twox-hash.workspace = true
parking_lot = "0.12"
