[package]
name = "boom-limiter"
version.workspace = true
edition.workspace = true

[dependencies]
boom-core = { path = "../boom-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
